nolan's lawyer reports that he feels vindicated after the changes to the code

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -86,7 +86,7 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \setlength\parindent{0.5in}
 
 
-The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also rare and complex, making it difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
+The creation of new ideas is one of the most fascinating, important, and difficult human capabilities to study.  We tend to focus on the most salient products conceptual generation (e.g., scientific breakthroughs), but every person is likely to have generated many novel concepts in ordinary life. Indeed, the generation of novel sentences, works of art, and so on may also be considered products of our capacity to create new concepts. However, while this capacity is of great interest, it is also highly complex, making it difficult to study in a typical laboratory setting. By consequence, we do not have a strong understanding of the representations and processes involved in the generation of new concepts.
 
 Questions concerning the generation of novel concepts are typically addressed within research on creativity, a tremendously diverse field employing a multitude of experimental and theoretical approaches \citep[see][]{kaufman2010handbook}. The processes underlying conceptual generation are commonly investigated using a creative cognition approach \citep{finke1992creative, smith1995creative}, in which the products of creative acts (such as drawings) are analyzed to obtain insights into how they might have been created. These approaches have made great advances in our understanding of creativity, but the focus on particular types of creative products such as drawings makes difficult the task of formalizing proposed processes and representations within a computational modeling framework. As a consequence, this approach does not often employ computational models to provide formal tests of competing theories. 
 
@@ -113,14 +113,14 @@ The broader set of observations made by Ward and colleagues provide a great deal
 
 The authors evaluated the predictions of several formal models on their data. Most notably, they showed that a hierarchical Bayesian model provided the strongest account of their results. Their model views observed examples as samples from an underlying category distribution, describing the location of the category in the space, as well as how it varies along each feature. In turn, each category is viewed as a sample from an underlying {\em domain} distribution, specifying distributional commonalities among the observed categories. Generated categories are thought to stem from the same domain distribution as observed categories, thus the distributional properties of observed categories will be preserved within the generated category.
 
-\cite{jern2013probabilistic} additionally tested a ``copy-and-tweak'' model that broadly resembles the earlier ``Path of Least Resistance'' account. The core proposal is that participants generate new items by copying stored examples from memory and tweaking them to generate something new. The copy-and-tweak model differs from the path of least resistance account in that it notably omits the hierarchical organization of categories, as well as selectivity in which features are changed \citep[both of which are factors in the Path of Least Resistance account;][]{ward2002role}. Instead, their copy-and-tweak model corresponds to a direct exemplar-similarity approach \citep[e.g.,][]{nosofsky1984choice,nosofsky1986attention}: The model generates new items according to their similarity to known members of the target category. This model provided a poor account of their results, as the experiments devised by \citeauthor{jern2013probabilistic} were specifically designed to challenge this model. However, its application is notable as a first step toward understanding creative cognition using well-known formal approaches from the categorization literature.
+\cite{jern2013probabilistic} additionally tested a ``copy-and-tweak'' model that broadly resembles the earlier ``Path of Least Resistance'' account. The core proposal is that participants generate new items by copying stored examples from memory and tweaking them to generate something new. The copy-and-tweak model differs from the path of least resistance account in that it notably omits the hierarchical organization of categories, as well as selectivity in which features are changed \citep[both of which are factors in the Path of Least Resistance account;][]{ward2002role}. Instead, their copy-and-tweak model corresponds to a direct exemplar-similarity approach \citep[e.g.,][]{nosofsky1984choice,nosofsky1986attention}, generating new items according to their similarity to known members of the target category. The copy-and-tweak model provided a poor account of their results, as the experiments devised by \citeauthor{jern2013probabilistic} were specifically designed to challenge it. However, its application is notable as a first step toward understanding creative cognition using well-known formal approaches from the categorization literature.
 
 
 \section{And Now for Something Different: A Role For Contrast}
 
 Prior work on category generation has explored only one of the possible constraints that guide category generation. The main concern of the published experiments has been on the distributional correspondences between learned and generated categories, and as a result most of the computational, theoretical, and empirical efforts have been towards explaining those effects. In this paper, we investigate another important constraint: category contrast. To generate a novel concept, individuals must produce something that is in some capacity {\em different} from what they already know. By consequence, contrast should be viewed a primary constraint on creative generation: new concepts must be different from existing ones. 
 
-Although it is evident that people are {\em capable} of creating new concepts and categories, it is not entirely clear how new concepts are systematically made different from what is already known. The hierarchical sampling model developed by \cite{jern2013probabilistic} assumes that differences between generated category are only due to random variation. The model assumes that generated categories are sampled from the same underlying domain distribution as observed categories, and will thus share a common distributional structure. The authors do not make predictions about the {\em location} of the category within the domain (the perceptual instantiation of category members). Indeed, under a strict interpretation of their model, the most probable new category to be generated is located in {\em exactly} the same location and distributional information given a single category. However, this is not simply an issue with their model but with a broader class of standard hierarchical Bayesian models \citep[][e.g., ]{griffithsscn07,kemp07}. Many of these models assume that at some point of the latent generative process the same underlying distribution generates all of the categories and thus, any differences between categories is due to {\em noise} and should not be {\em systematic}. The best a standard hierarchical Bayesian model can do at capturing contrast is to assume that the new category is placed uniformly at random over stimulus space. This defeats the purpose of a hierarchy as it is ignored when determining a new category location!\footnote{It is plausible that some hierarchical Bayesian model could be created that generates categories different from each other. However, this model would not be a standard application or extension of most pre-existing hierarchical Bayesian models.}
+Although it is evident that people are {\em capable} of creating new concepts and categories, it is not entirely clear how new concepts are systematically made different from what is already known. The hierarchical sampling model developed by \cite{jern2013probabilistic} assumes that differences between generated category are only due to random variation. The model assumes that generated categories are sampled from the same underlying domain distribution as observed categories, and will thus share a common distributional structure. The authors do not make predictions about the {\em location} of the category within the domain (the perceptual instantiation of category members). Under a strict interpretation of their model, given knowledge of a single category within the domain, the most probable new category to be generated is located in {\em exactly} the same location and possesses an identical distributional structure. However, this is not simply an issue with their model but with a broader class of standard hierarchical Bayesian models \citep[][e.g., ]{griffithsscn07,kemp07}. Many of these models assume that at some point of the latent generative process the same underlying distribution generates all of the categories and thus, any differences between categories is due to {\em noise} and should not be {\em systematic}. The best a standard hierarchical Bayesian model can do at capturing contrast is to assume that the new category is placed uniformly at random over stimulus space. This defeats the purpose of a hierarchy as it is ignored when determining a new category location!\footnote{It is plausible that some hierarchical Bayesian model could be created that generates categories different from each other. However, this model would not be a standard application or extension of most pre-existing hierarchical Bayesian models.}
 
 The copy-and-tweak model tested by \cite{jern2013probabilistic} also claims little about how generated categories should contrast with what is already known. In their simulations, the model was only tested on generation after the learner had been exposed to members of the target category, and so the model's ability to generate a new category from scratch was not evaluated. However, the model's generation is based exclusively on similarity to known members of the target category; when there are no members of the target category, generation is presumably random.
 
